test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/sizeof_incomplete_expr.plx
type struc s;
pub fn get_ptr(none) *struc s;

pub fn main(none) i32 {
    struct_ptr: *struc s = get_ptr()

    #  can't apply sizeof to expression w/ incomplete type
    return sizeof(struct_ptr[])
}
